[gd_scene load_steps=33 format=3 uid="uid://cnor6jdbe28rj"]

[ext_resource type="Script" path="res://shared/cube/cube.gd" id="1_q4yb4"]
[ext_resource type="BoxMesh" uid="uid://c466clxudld4s" path="res://shared/cube/cleared.tres" id="2_m3nde"]
[ext_resource type="Script" path="res://shared/cube/top_mesh.gd" id="4_wdcma"]
[ext_resource type="Script" path="res://shared/cube/cube_scanner.gd" id="5_s41nj"]
[ext_resource type="AudioStream" uid="uid://bjpkhrcmt7lw" path="res://shared/cube/audio/open-tile.wav" id="6_o0a8b"]
[ext_resource type="AudioStream" uid="uid://bbvy78gqnhud1" path="res://shared/cube/audio/place-flag.wav" id="7_eeb88"]
[ext_resource type="AudioStream" uid="uid://dya4t4p2oap3d" path="res://shared/cube/audio/remove-flag.wav" id="8_pc8bq"]
[ext_resource type="AudioStream" uid="uid://blr22e80lqmjd" path="res://shared/cube/audio/hover-cube.wav" id="9_fg1ko"]
[ext_resource type="AudioStream" uid="uid://cl6qd5gf6x7j3" path="res://shared/cube/audio/explosion.wav" id="10_llvf4"]
[ext_resource type="Texture2D" uid="uid://bxnym2xl4bk16" path="res://shared/cube/mine.png" id="11_n6pam"]
[ext_resource type="Texture2D" uid="uid://d2ddjfojqn6ka" path="res://shared/cube/flag.png" id="12_bksym"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y1sac"]
size = Vector3(2, 0.6, 2)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j51ek"]
noise_type = 0
fractal_type = 3
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pw8e8"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_j51ek")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xq44k"]
transparency = 1
albedo_color = Color(0.48, 0.48, 0.48, 0.8)
roughness = 0.32
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.77
normal_enabled = true
normal_texture = SubResource("NoiseTexture2D_pw8e8")
heightmap_scale = -16.0
refraction_scale = 0.08

[sub_resource type="CylinderMesh" id="CylinderMesh_sjbvx"]
material = SubResource("StandardMaterial3D_xq44k")
top_radius = 0.707
bottom_radius = 0.707
height = 1.5
radial_segments = 4
cap_bottom = false

[sub_resource type="BoxShape3D" id="BoxShape3D_aokb8"]

[sub_resource type="Gradient" id="Gradient_xhxdg"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4qnxv"]
noise_type = 0
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_fr8oe"]
width = 100
height = 100
color_ramp = SubResource("Gradient_xhxdg")
noise = SubResource("FastNoiseLite_4qnxv")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8afpo"]
random_pitch = 1.2
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("6_o0a8b")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a7n7b"]
playback_mode = 1
random_pitch = 1.3
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("9_fg1ko")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3l74d"]
fractal_lacunarity = 20.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_q3d2d"]
noise = SubResource("FastNoiseLite_3l74d")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ijvx"]
transparency = 1
vertex_color_use_as_albedo = true
emission = Color(0, 1, 0, 1)
normal_texture = SubResource("NoiseTexture2D_q3d2d")

[sub_resource type="TextMesh" id="TextMesh_wss33"]
material = SubResource("StandardMaterial3D_1ijvx")
text = "999"
font_size = 64

[sub_resource type="Curve" id="Curve_ovcfe"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.195652, 1), 0.0, 0.0, 0, 0, Vector2(0.970109, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_cvqp5"]
offsets = PackedFloat32Array(0, 0.677419, 1)
colors = PackedColorArray(0, 1, 0, 1, 0, 0.380392, 0, 1, 0, 0.380392, 0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_qvm27"]
fractal_lacunarity = 20.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rorg8"]
noise = SubResource("FastNoiseLite_qvm27")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vd21r"]
transparency = 1
vertex_color_use_as_albedo = true
metallic = 1.0
roughness = 0.5
emission = Color(0, 1, 0, 1)
normal_texture = SubResource("NoiseTexture2D_rorg8")

[sub_resource type="TextMesh" id="TextMesh_jr2io"]
material = SubResource("StandardMaterial3D_vd21r")
text = "0"
font_size = 24

[node name="Cube" type="StaticBody3D" groups=["cubes"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
collision_layer = 13
collision_mask = 12
script = ExtResource("1_q4yb4")

[node name="CubeScanner" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("5_s41nj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CubeScanner"]
shape = SubResource("BoxShape3D_y1sac")

[node name="TopMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 0.1, 0, -0.707107, 0, 0.707107, 0, 0.575, 0)
mesh = SubResource("CylinderMesh_sjbvx")
script = ExtResource("4_wdcma")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_m3nde")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_aokb8")

[node name="NearbyMinesLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.515925, 0)
no_depth_test = true
render_priority = 127
modulate = Color(0, 0, 0, 1)
font_size = 100

[node name="Flag" type="Sprite3D" parent="."]
transform = Transform3D(-1.74846e-08, 0.4, 1.74846e-08, 0, -1.74846e-08, 0.4, 0.4, 1.74846e-08, 7.64274e-16, 0, 0.61, 0)
visible = false
texture = ExtResource("12_bksym")

[node name="Label3D" type="Label3D" parent="."]

[node name="Node3D" type="Node3D" parent="."]

[node name="Mine" type="Sprite3D" parent="Node3D"]
transform = Transform3D(0.28, 0, 0, 0, -1.22392e-08, -0.28, 0, 0.28, -1.22392e-08, 0, 0.399, 0)
texture = ExtResource("11_n6pam")

[node name="Stains" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="Sprite3D5" type="Sprite3D" parent="Node3D/Stains"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0, 0.501, 0)
texture = SubResource("NoiseTexture2D_fr8oe")

[node name="Sprite3D" type="Sprite3D" parent="Node3D/Stains"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.495107)
texture = SubResource("NoiseTexture2D_fr8oe")

[node name="Sprite3D2" type="Sprite3D" parent="Node3D/Stains"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.494462, 0, -0.00129542)
texture = SubResource("NoiseTexture2D_fr8oe")

[node name="Sprite3D4" type="Sprite3D" parent="Node3D/Stains"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.493393, 0, -0.00129542)
texture = SubResource("NoiseTexture2D_fr8oe")

[node name="Sprite3D3" type="Sprite3D" parent="Node3D/Stains"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.497349)
texture = SubResource("NoiseTexture2D_fr8oe")

[node name="RevealCube" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_8afpo")
volume_db = -8.901

[node name="PlaceFlag" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_eeb88")
volume_db = -28.576

[node name="RemoveFlag" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pc8bq")

[node name="HighlightCube" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_a7n7b")
volume_db = -25.377

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_llvf4")

[node name="ScoreParticleBig" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.865572, 0)
emitting = false
amount = 1
one_shot = true
local_coords = true
mesh = SubResource("TextMesh_wss33")
direction = Vector3(0, 1, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.75
initial_velocity_max = 0.75
damping_min = 0.75
damping_max = 0.75
scale_amount_curve = SubResource("Curve_ovcfe")
color_ramp = SubResource("Gradient_cvqp5")

[node name="ScoreParticleSmall" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.865572, 0)
emitting = false
amount = 1
one_shot = true
local_coords = true
mesh = SubResource("TextMesh_jr2io")
direction = Vector3(0, 1, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.75
initial_velocity_max = 0.75
damping_min = 0.75
damping_max = 0.75
scale_amount_curve = SubResource("Curve_ovcfe")
color_ramp = SubResource("Gradient_cvqp5")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
